fixed profile image getting cut off

--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@ body {
   justify-content: center;
   align-items: center;
   border-radius: 10px;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .background {
